overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ body {
   color: #333;
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 18px;
-  overflow-x: hidden;
 }
 
 .img_responsive {
